# fetch-papers-list

./: .gitignore  README.md  pyproject.toml
get_papers_list/: cli.py  fetcher.py
get_pubmed_papers/: cli.py  exporter.py  fetcher.py  init.py  parser.py
